src/input.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .active {
    @apply font-bold;
  }
  .btn-primary {
    @apply rounded-custom bg-primary text-white shadow-primary;
  }
  .btn-secondary {
    @apply rounded-custom text-primary outline outline-1 outline-primary;
  }
  button.active {
    @apply rounded-custom bg-primary text-white shadow-primary font-semibold;
  }
  .heading {
    @apply font-bold text-heading;
  }
  .section-tag {
    @apply text-primary mb-[10px] font-medium text-[18px];
  }
  .section-title {
    @apply heading text-4xl leading-[48px] mb-4;
  }
  .section-description {
    @apply text-paragraph font-normal text-[16px] leading-7 mb-9;
  }
  .list-bullet {
    @apply before:w-2 before:h-2 before:bg-primary before:rounded-full before:outline before:outline-[5px] before:outline-primary/10 before:content-[''] relative before:absolute before:top-1/2 before:-translate-y-1/2 before:-left-5 ml-6;
  }
  .link-header {
    @apply font-medium text-xl leading-5 mb-[22px];
  }
  .link-item {
    @apply text-[#E7E7E7] leading-[46px] hover:font-semibold;
  }
  .hamburger {
    @apply inline-block cursor-pointer;
  }
  .hamburger .bar-1, .hamburger .bar-2, .hamburger .bar-3 {
    @apply w-9 h-1 bg-primary my-1 mx-0 transition-all rounded-full;
  }
  .hamburger.active .bar-1 {
    @apply translate-y-2 -rotate-45;
  }
  .hamburger.active .bar-2 {
    @apply opacity-0;
  }
  .hamburger.active .bar-3 {
    @apply -translate-y-2 rotate-45;
  }
  .dropdown {
    @apply flex after:content-[url('../assets/img/icons/CaretDown.svg')] after:pl-1.5;
  }
}

